--- a/assets/bibliography/2024-05-07-extreme-multilabel-learning.bib
+++ b/assets/bibliography/2024-05-07-extreme-multilabel-learning.bib
@@ -1,14 +1,488 @@
-@article{gregor2015draw,
-  title={DRAW: A recurrent neural network for image generation},
-  author={Gregor, Karol and Danihelka, Ivo and Graves, Alex and Rezende, Danilo Jimenez and Wierstra, Daan},
-  journal={arXiv preprint, arXiv:1502.04623},
-  year={2015},
-  url={https://arxiv.org/pdf/1502.04623.pdf}
-},
-@article{yu2014large,
+@article{babbar2019data,
+	title     = {Data scarcity, robustness and extreme multi-label classification},
+	author    = {Babbar, Rohit and Sch{\"o}lkopf, Bernhard},
+	year      = 2019,
+	journal   = {Machine Learning},
+	publisher = {Springer},
+	volume    = 108,
+	number    = 8,
+	pages     = {1329--1351},
+}
+@inproceedings{agrawal2013multi,
+	title     = {Multi-label learning with millions of labels: Recommending advertiser bid phrases for web pages},
+	author    = {Agrawal, Rahul and Gupta, Archit and Prabhu, Yashoteja and Varma, Manik},
+	year      = 2013,
+	booktitle = {Proceedings of the 22nd international conference on World Wide Web},
+	pages     = {13--24},
+	}
+@article{aksoy2022multi,
+	title     = {Multi-Label Noise Robust Collaborative Learning for Remote Sensing Image Classification},
+	author    = {Aksoy, Ahmet Kerem and Ravanbakhsh, Mahdyar and Demir, Beg{\"u}m},
+	year      = 2022,
+	journal   = {IEEE Transactions on Neural Networks and Learning Systems},
+	publisher = {IEEE},
+}
+@inproceedings{babbar2017dismec,
+	title     = {Dismec: Distributed sparse machines for extreme multi-label classification},
+	author    = {Babbar, Rohit and Sch{\"o}lkopf, Bernhard},
+	year      = 2017,
+	booktitle = {Proceedings of the tenth ACM international conference on web search and data mining},
+	pages     = {721--729},
+}
+@article{babbar2019data,
+	title     = {Data scarcity, robustness and extreme multi-label classification},
+	author    = {Babbar, Rohit and Sch{\"o}lkopf, Bernhard},
+	year      = 2019,
+	journal   = {Machine Learning},
+	publisher = {Springer},
+	volume    = 108,
+	number    = 8,
+	pages     = {1329--1351},
+}
+@misc{Bhatia16,
+	title     = {The extreme classification repository: Multi-label datasets and code},
+	author    = {Bhatia, K. and Dahiya, K. and Jain, H. and Kar, P. and Mittal, A. and Prabhu, Y. and Varma, M.},
+	year      = 2016,
+	url       = {http://manikvarma.org/downloads/XC/XMLRepository.html},
+}
+@article{bhatia2015sleec,
+	title     = {Sparse local embeddings for extreme multi-label classification},
+	author    = {Bhatia, Kush and Jain, Himanshu and Kar, Purushottam and Varma, Manik and Jain, Prateek},
+	year      = 2015,
+	journal   = {Advances in neural information processing systems},
+	volume    = 28,
+}
+@misc{bibsonomy,
+	title     = {BibSonomy},
+	note      = {Accessed: 2022-12-23},
+	howpublished = {\url{https://www.bibsonomy.org/}},
+}
+@article{chalkidis2019extreme,
+	title     = {Extreme multi-label legal text classification: A case study in EU legislation},
+	author    = {Chalkidis, Ilias and Fergadiotis, Manos and Malakasiotis, Prodromos and Aletras, Nikolaos and Androutsopoulos, Ion},
+	year      = 2019,
+	journal   = {arXiv preprint arXiv:1905.10892},
+}
+@inproceedings{chalkidis2019large,
+	title     = {Large-Scale Multi-Label Text Classification on EU Legislation},
+	author    = {Chalkidis, Ilias and Fergadiotis, Emmanouil and Malakasiotis, Prodromos and Androutsopoulos, Ion},
+	year      = 2019,
+	booktitle = {Proceedings of the 57th Annual Meeting of the Association for Computational Linguistics},
+	pages     = {6314--6322},
+}
+@misc{chang2022extreme,
+	title     = {Extreme Multi-Label Classification},
+	author    = {Chang, Wei-Cheng and Yu, Hsiang-Fu and Dhillon, Inderjit},
+	year      = 2022,
+	month     = feb # {~15},
+	publisher = {Google Patents},
+	note      = {US Patent App. US 11,250,039 B1},
+}
+@inproceedings{chen2015event,
+	title     = {Event extraction via dynamic multi-pooling convolutional neural networks},
+	author    = {Chen, Yubo and Xu, Liheng and Liu, Kang and Zeng, Daojian and Zhao, Jun},
+	year      = 2015,
+	booktitle = {Proceedings of the 53rd Annual Meeting of the Association for Computational Linguistics and the 7th International Joint Conference on Natural Language Processing (Volume 1: Long Papers)},
+	pages     = {167--176},
+}
+@inproceedings{craswell2021trec,
+	title     = {TREC Deep learning track: reusable test collections in the large data regime},
+	author    = {Craswell, Nick and Mitra, Bhaskar and Yilmaz, Emine and Campos, Daniel and Voorhees, Ellen M and Soboroff, Ian},
+	year      = 2021,
+	booktitle = {Proceedings of the 44th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+	pages     = {2369--2375},
+}
+@inproceedings{dahiya2021deepxml,
+	title     = {Deepxml: A deep extreme multi-label learning framework applied to short text documents},
+	author    = {Dahiya, Kunal and Saini, Deepak and Mittal, Anshul and Shaw, Ankush and Dave, Kushal and Soni, Akshay and Jain, Himanshu and Agarwal, Sumeet and Varma, Manik},
+	year      = 2021,
+	booktitle = {Proceedings of the 14th ACM International Conference on Web Search and Data Mining},
+	pages     = {31--39},
+}
+@inproceedings{dahiya2021siamesexml,
+	title     = {SiameseXML: Siamese networks meet extreme classifiers with 100m labels},
+	author    = {Dahiya, Kunal and Agarwal, Ananye and Saini, Deepak and Gururaj, K and Jiao, Jian and Singh, Amit and Agarwal, Sumeet and Kar, Purushottam and Varma, Manik},
+	year      = 2021,
+	booktitle = {International Conference on Machine Learning},
+	pages     = {2330--2340},
+	organization = {PMLR},
+}
+@misc{dave2021extreme,
+	title     = {Extreme classification processing using graphs and neural networks},
+	author    = {Dave, Kushal and Saini, Deepak and Jain, Arnav Kumar and Jiao, Jian and Kumar, Amit and  Singh, Rambachan and Zhang, Ruofei and Varma, Manik},
+	year      = 2021,
+	month     = apr # {~12},
+	publisher = {Google Patents},
+	note      = {US Patent App. WO 2022/182372 A1},
+}
+@misc{eurovoc,
+	title     = {{Eur-Lex} Access to European Union Law},
+	note      = {Accessed: 2022-12-23},
+	howpublished = {\url{https://eur-lex.europa.eu/browse/eurovoc.html}},
+}
+@misc{hori2021method,
+	title     = {Method and system for multi-label classification},
+	author    = {Hori, Takaaki and Hori, Chiori and Watanabe, Shinji and Hershey, John and Harsham, Bret and Le Roux, Jonathan},
+	year      = 2021,
+	month     = aug # {~10},
+	publisher = {Google Patents},
+	note      = {US Patent 11,086,918},
+}
+@article{huang2015bidirectional,
+	title     = {Bidirectional LSTM-CRF models for sequence tagging},
+	author    = {Huang, Zhiheng and Xu, Wei and Yu, Kai},
+	year      = 2015,
+	journal   = {arXiv preprint arXiv:1508.01991},
+}
+@inproceedings{jain2016pfastrexml,
+	title     = {Extreme multi-label loss functions for recommendation, tagging, ranking \& other missing label applications},
+	author    = {Jain, Himanshu and Prabhu, Yashoteja and Varma, Manik},
+	year      = 2016,
+	booktitle = {Proceedings of the 22nd ACM SIGKDD international conference on knowledge discovery and data mining},
+	pages     = {935--944},
+}
+@inproceedings{jain2019slice,
+	title     = {Slice: Scalable linear extreme classifiers trained on 100 million labels for related searches},
+	author    = {Jain, Himanshu and Balasubramanian, Venkatesh and Chunduri, Bhanu and Varma, Manik},
+	year      = 2019,
+	booktitle = {Proceedings of the Twelfth ACM International Conference on Web Search and Data Mining},
+	pages     = {528--536},
+}
+@inproceedings{jalan2019accelerating,
+	title     = {Accelerating extreme classification via adaptive feature agglomeration},
+	author    = {Jalan, Ankit and Kar, Purushottam},
+	year      = 2019,
+	booktitle = {Proceedings of the 28th International Joint Conference on Artificial Intelligence},
+	pages     = {2600--2606},
+}
+@article{jalan2019defrag,
+    title  = {Accelerating extreme classification via adaptive feature agglomeration},
+    author = {Jalan, Ankit and Kar, Purushottam},
+    year   = 2019,
+    journal = {arXiv preprint arXiv:1905.11769},
+}
+@article{jasinska2016log,
+	title     = {Log-time and log-space extreme classification},
+	author    = {Jasinska, Kalina and Karampatziakis, Nikos},
+	year      = 2016,
+	journal   = {arXiv preprint arXiv:1611.01964},
+}
+@inproceedings{jesse2009Machine,
+	title     = {Classifier Chains for Multi-label Classification},
+	author    = {Read, Jesse and Pfahringer, Bernhard and Holmes, Geoff and Frank, Eibe},
+	year      = 2009,
+	booktitle = {Machine Learning and Knowledge Discovery in Databases},
+	publisher = {Springer Berlin Heidelberg},
+	address   = {Berlin, Heidelberg},
+	pages     = {254--269},
+	isbn      = {978-3-642-04174-7},
+	editor    = {Buntine, Wray and Grobelnik, Marko and Mladeni{\'{c}}, Dunja and Shawe-Taylor, John},
+}
+@inproceedings{katakis2008multilabel,
+	title     = {Multilabel text classification for automated tag suggestion},
+	author    = {Katakis, Ioannis and Tsoumakas, Grigorios and Vlahavas, Ioannis},
+	year      = 2008,
+	booktitle = {Proceedings of the ECML/PKDD},
+	volume    = 18,
+	pages     = 5,
+	organization = {Citeseer},
+}
+@article{khandagale2020bonsai,
+	title     = {Bonsai: diverse and shallow trees for extreme multi-label classification},
+	author    = {Khandagale, Sujay and Xiao, Han and Babbar, Rohit},
+	year      = 2020,
+	journal   = {Machine Learning},
+	publisher = {Springer},
+	volume    = 109,
+	number    = 11,
+	pages     = {2099--2119},
+}
+@article{kim2014convolutional,
+	title     = {Convolutional neural networks for sentence classification In: Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP), 1746--1751.. ACL},
+	author    = {Kim, Yoon},
+	year      = 2014,
+	journal   = {Association for Computational Linguistics, Doha, Qatar},
+}
+@misc{li2020systems,
+	title     = {Systems and methods for large scale semantic indexing with deep level-wise extreme multi-label learning},
+	author    = {Li, Dingcheng and Zhang, Jingyuan and Li, Ping},
+	year      = 2020,
+	month     = nov # {~12},
+	publisher = {Google Patents},
+	note      = {US Patent App. 16/409,148},
+}
+@inproceedings{liu2017xmlcnn,
+	title     = {Deep learning for extreme multi-label text classification},
+	author    = {Liu, Jingzhou and Chang, Wei-Cheng and Wu, Yuexin and Yang, Yiming},
+	year      = 2017,
+	booktitle = {Proceedings of the 40th international ACM SIGIR conference on research and development in information retrieval},
+	pages     = {115--124},
+}
+@article{liu2021emerging,
+	title     = {The emerging trends of multi-label learning},
+	author    = {Liu, Weiwei and Wang, Haobo and Shen, Xiaobo and Tsang, Ivor W},
+	year      = 2021,
+	journal   = {IEEE transactions on pattern analysis and machine intelligence},
+	publisher = {IEEE},
+	volume    = 44,
+	number    = 11,
+	pages     = {7955--7974},
+}
+@inproceedings{loza2008efficient,
+	title     = {Efficient pairwise multilabel classification for large-scale problems in the legal domain},
+	author    = {Loza Menc{\'\i}a, Eneldo and F{\"u}rnkranz, Johannes},
+	year      = 2008,
+	booktitle = {Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+	pages     = {50--65},
+	organization = {Springer},
+}
+@incollection{loza2010efficient,
+	title     = {Efficient multilabel classification algorithms for large-scale problems in the legal domain},
+	author    = {Loza Menc{\'\i}a, Eneldo and F{\"u}rnkranz, Johannes},
+	year      = 2010,
+	booktitle = {Semantic Processing of Legal Texts},
+	publisher = {Springer},
+	pages     = {192--215},
+}
+@article{luong2015effective,
+	title     = {Effective approaches to attention-based neural machine translation},
+	author    = {Luong, Minh-Thang and Pham, Hieu and Manning, Christopher D},
+	year      = 2015,
+	journal   = {arXiv preprint arXiv:1508.04025},
+}
+@inproceedings{mcauley2013hidden,
+	title     = {Hidden factors and hidden topics: understanding rating dimensions with review text},
+	author    = {McAuley, Julian and Leskovec, Jure},
+	year      = 2013,
+	booktitle = {Proceedings of the 7th ACM conference on Recommender systems},
+	pages     = {165--172},
+}
+@inproceedings{mcauley2015image,
+	title     = {Image-based recommendations on styles and substitutes},
+	author    = {McAuley, Julian and Targett, Christopher and Shi, Qinfeng and Van Den Hengel, Anton},
+	year      = 2015,
+	booktitle = {Proceedings of the 38th international ACM SIGIR conference on research and development in information retrieval},
+	pages     = {43--52},
+}
+@article{medini2019extreme,
+	title     = {Extreme classification in log memory using count-min sketch: A case study of amazon search with 50m products},
+	author    = {Medini, Tharun Kumar Reddy and Huang, Qixuan and Wang, Yiqiu and Mohan, Vijai and Shrivastava, Anshumali},
+	year      = 2019,
+	journal   = {Advances in Neural Information Processing Systems},
+	volume    = 32,
+}
+@inproceedings{mittal2022multi,
+	title     = {Multi-modal Extreme Classification},
+	author    = {Mittal, Anshul and Dahiya, Kunal and Malani, Shreya and Ramaswamy, Janani and Kuruvilla, Seba and Ajmera, Jitendra and Chang, Keng-hao and Agarwal, Sumeet and Kar, Purushottam and Varma, Manik},
+	year      = 2022,
+	booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+	pages     = {12393--12402},
+}
+@article{niu2019multi,
+	title     = {Multi-label co-regularization for semi-supervised facial action unit recognition},
+	author    = {Niu, Xuesong and Han, Hu and Shan, Shiguang and Chen, Xilin},
+	year      = 2019,
+	journal   = {Advances in neural information processing systems},
+	volume    = 32,
+}
+@inproceedings{pennington2014glove,
+	title     = {Glove: Global vectors for word representation},
+	author    = {Pennington, Jeffrey and Socher, Richard and Manning, Christopher D},
+	year      = 2014,
+	booktitle = {Proceedings of the 2014 conference on empirical methods in natural language processing (EMNLP)},
+	pages     = {1532--1543},
+}
+@inproceedings{prabhu2014fastxml,
+	title     = {Fastxml: A fast, accurate and stable tree-classifier for extreme multi-label learning},
+	author    = {Prabhu, Yashoteja and Varma, Manik},
+	year      = 2014,
+	booktitle = {Proceedings of the 20th ACM SIGKDD international conference on Knowledge discovery and data mining},
+	pages     = {263--272},
+}
+@inproceedings{prabhu2018parabel,
+	title     = {Parabel: Partitioned label trees for extreme classification with application to dynamic search advertising},
+	author    = {Prabhu, Yashoteja and Kag, Anil and Harsola, Shrutendra and Agrawal, Rahul and Varma, Manik},
+	year      = 2018,
+	booktitle = {Proceedings of the 2018 World Wide Web Conference},
+	pages     = {993--1002},
+}
+@inproceedings{prabhu2018swiftxml,
+	title     = {Extreme multi-label learning with label features for warm-start tagging, ranking \& recommendation},
+	author    = {Prabhu, Yashoteja and Kag, Anil and Gopinath, Shilpa and Dahiya, Kunal and Harsola, Shrutendra and Agrawal, Rahul and Varma, Manik},
+	year      = 2018,
+	booktitle = {Proceedings of the Eleventh ACM International Conference on Web Search and Data Mining},
+	pages     = {441--449},
+}
+@article{schultheis2020unbiased,
+	title     = {Unbiased Loss Functions for Extreme Classification With Missing Labels},
+	author    = {Schultheis, Erik and Qaraei, Mohammadreza and Gupta, Priyanshu and Babbar, Rohit},
+	year      = 2020,
+	journal   = {arXiv preprint arXiv:2007.00237},
+}
+@inproceedings{siblini2018craftml,
+	title     = {Craftml, an efficient clustering-based random forest for extreme multi-label learning},
+	author    = {Siblini, Wissam and Kuntz, Pascale and Meyer, Frank},
+	year      = 2018,
+	booktitle = {International Conference on Machine Learning},
+	pages     = {4664--4673},
+	organization = {PMLR},
+}
+@inproceedings{smeaton2004trecvid,
+	title     = {TRECVID: Evaluating the effectiveness of information retrieval tasks on digital video},
+	author    = {Smeaton, Alan F and Over, Paul and Kraaij, Wessel},
+	year      = 2004,
+	booktitle = {Proceedings of the 12th annual ACM international conference on Multimedia},
+	pages     = {652--655},
+}
+@inproceedings{snoek2006challenge,
+	title     = {The challenge problem for automated detection of 101 semantic concepts in multimedia},
+	author    = {Snoek, Cees GM and Worring, Marcel and Van Gemert, Jan C and Geusebroek, Jan-Mark and Smeulders, Arnold WM},
+	year      = 2006,
+	booktitle = {Proceedings of the 14th ACM international conference on Multimedia},
+	pages     = {421--430},
+}
+@inproceedings{song2020large,
+	title     = {Large-scale training system for 100-million classification at alibaba},
+	author    = {Song, Liuyihan and Pan, Pan and Zhao, Kang and Yang, Hao and Chen, Yiming and Zhang, Yingya and Xu, Yinghui and Jin, Rong},
+	year      = 2020,
+	booktitle = {Proceedings of the 26th ACM SIGKDD International Conference on Knowledge Discovery \& Data Mining},
+	pages     = {2909--2930},
+}
+@inproceedings{tagami2017annexml,
+	title     = {Annexml: Approximate nearest neighbor search for extreme multi-label classification},
+	author    = {Tagami, Yukihiro},
+	year      = 2017,
+	booktitle = {Proceedings of the 23rd ACM SIGKDD international conference on knowledge discovery and data mining},
+	pages     = {455--464},
+}
+@inproceedings{tsoumakas2008effective,
+	title     = {Effective and efficient multilabel classification in domains with large number of labels},
+	author    = {Tsoumakas, Grigorios and Katakis, Ioannis and Vlahavas, Ioannis},
+	year      = 2008,
+	booktitle = {Proc. ECML/PKDD 2008 Workshop on Mining Multidimensional Data (MMD’08)},
+	volume    = 21,
+	pages     = {53--59},
+}
+@article{tsoumakas2009mining,
+	title     = {Mining multi-label data},
+	author    = {Tsoumakas, Grigorios and Katakis, Ioannis and Vlahavas, Ioannis},
+	year      = 2009,
+	journal   = {Data mining and knowledge discovery handbook},
+	publisher = {Springer},
+	pages     = {667--685},
+}
+@article{varma2019extreme,
+	title     = {Extreme classification},
+	author    = {Varma, Manik},
+	year      = 2019,
+	journal   = {Communications of the ACM},
+	publisher = {ACM New York, NY, USA},
+	volume    = 62,
+	number    = 11,
+	pages     = {44--45},
+}
+@inproceedings{wang2013capturing,
+	title     = {Capturing global semantic relationships for facial action unit recognition},
+	author    = {Wang, Ziheng and Li, Yongqiang and Wang, Shangfei and Ji, Qiang},
+	year      = 2013,
+	booktitle = {Proceedings of the IEEE International Conference on Computer Vision},
+	pages     = {3304--3311},
+}
+@inproceedings{wang2013theoretical,
+	title     = {A theoretical analysis of NDCG type ranking measures},
+	author    = {Wang, Yining and Wang, Liwei and Li, Yuanzhi and He, Di and Liu, Tie-Yan},
+	year      = 2013,
+	booktitle = {Conference on learning theory},
+	pages     = {25--54},
+	organization = {PMLR},
+}
+@inproceedings{wei2019eda,
+	title     = {EDA: Easy Data Augmentation Techniques for Boosting Performance on Text Classification Tasks},
+	author    = {Wei, Jason and Zou, Kai},
+	year      = 2019,
+	booktitle = {Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)},
+	pages     = {6382--6388},
+}
+@inproceedings{wei2021towards,
+	title     = {Towards Robust Prediction on Tail Labels},
+	author    = {Wei, Tong and Tu, Wei-Wei and Li, Yu-Feng and Yang, Guo-Ping},
+	year      = 2021,
+	booktitle = {Proceedings of the 27th ACM SIGKDD Conference on Knowledge Discovery \& Data Mining},
+	pages     = {1812--1820},
+}
+@article{wei2022survey,
+	title     = {A Survey on Extreme Multi-label Learning},
+	author    = {Wei, Tong and Mao, Zhen and Shi, Jiang-Xin and Li, Yu-Feng and Zhang, Min-Ling},
+	year      = 2022,
+	journal   = {arXiv preprint arXiv:2210.03968},
+}
+@inproceedings{weston2011wsabie,
+	title     = {Wsabie: Scaling up to large vocabulary image annotation},
+	author    = {Weston, Jason and Bengio, Samy and Usunier, Nicolas},
+	year      = 2011,
+	booktitle = {Twenty-Second International Joint Conference on Artificial Intelligence},
+}
+@inproceedings{wetzker2008analyzing,
+	title     = {Analyzing social bookmarking systems: A del. icio. us cookbook},
+	author    = {Wetzker, Robert and Zimmermann, Carsten and Bauckhage, Christian},
+	year      = 2008,
+	booktitle = {Proceedings of the ECAI 2008 Mining Social Data Workshop},
+	pages     = {26--30},
+}
+@inproceedings{yen2016pdsparse,
+	title     = {Pd-sparse: A primal and dual sparse approach to extreme multiclass and multilabel classification},
+	author    = {Yen, Ian En-Hsu and Huang, Xiangru and Ravikumar, Pradeep and Zhong, Kai and Dhillon, Inderjit},
+	year      = 2016,
+	booktitle = {International conference on machine learning},
+	pages     = {3069--3077},
+	organization = {PMLR},
+}
+@inproceedings{yen2017ppdsparse,
+	title     = {Ppdsparse: A parallel primal-dual sparse method for extreme classification},
+	author    = {Yen, Ian EH and Huang, Xiangru and Dai, Wei and Ravikumar, Pradeep and Dhillon, Inderjit and Xing, Eric},
+	year      = 2017,
+	booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+	pages     = {545--553},
+}
+@article{you2019attentionxml,
+	title     = {Attentionxml: Label tree-based attention-aware deep model for high-performance extreme multi-label text classification},
+	author    = {You, Ronghui and Zhang, Zihan and Wang, Ziye and Dai, Suyang and Mamitsuka, Hiroshi and Zhu, Shanfeng},
+	year      = 2019,
+	journal   = {Advances in Neural Information Processing Systems},
+	volume    = 32,
+}
+@inproceedings{yu2014large,
 	title     = {Large-scale multi-label learning with missing labels},
 	author    = {Yu, Hsiang-Fu and Jain, Prateek and Kar, Purushottam and Dhillon, Inderjit},
 	year      = 2014,
 	booktitle = {International conference on machine learning},
 	pages     = {593--601},
-	organization = {PMLR}
+	organization = {PMLR},
+}
+@article{zhang2006bpmll,
+	title     = {Multilabel neural networks with applications to functional genomics and text categorization},
+	author    = {Zhang, Min-Ling and Zhou, Zhi-Hua},
+	year      = 2006,
+	journal   = {IEEE transactions on Knowledge and Data Engineering},
+	publisher = {IEEE},
+	volume    = 18,
+	number    = 10,
+	pages     = {1338--1351},
+}
+@article{zhang2013review,
+	title     = {A review on multi-label learning algorithms},
+	author    = {Zhang, Min-Ling and Zhou, Zhi-Hua},
+	year      = 2013,
+	journal   = {IEEE transactions on knowledge and data engineering},
+	publisher = {IEEE},
+	volume    = 26,
+	number    = 8,
+	pages     = {1819--1837},
+}
+@article{zubiaga2012enhancing,
+	title     = {Enhancing navigation on wikipedia with social tags},
+	author    = {Zubiaga, Arkaitz},
+	year      = 2012,
+	journal   = {arXiv preprint arXiv:1202.5469},
+}
+
