add concluding remarks and first grammar checking

--- a/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
+++ b/assets/bibliography/2024-05-07-understanding-expressive-tgns.bib
@@ -131,4 +131,11 @@
    url = {https://emanuelerossi.co.uk/assets/pdf/TGN_2021_01_22.pdf},
  }
 
+ @article{beddar2022weisfeiler,
+  title={Weisfeiler--Lehman goes Dynamic: An Analysis of the Expressive Power of Graph Neural Networks for Attributed and Dynamic Graphs},
+  author={Beddar-Wiesing, Silvia and D'Inverno, Giuseppe Alessio and Graziani, Caterina and Lachi, Veronica and Moallemy-Oureh, Alice and Scarselli, Franco and Thomas, Josephine Maria},
+  journal={arXiv preprint arXiv:2210.03990},
+  year={2022}
+}
+
 
