--- a/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
+++ b/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
@@ -49,3 +49,18 @@ year={2023},
 url={https://openreview.net/forum?id=s8cMuxI5gu},
 note={under review}
 }
+
+@inproceedings{zhu2021r,
+  title={R-GAP: Recursive Gradient Attack on Privacy},
+  author={Zhu, Junyi and Blaschko, Matthew B},
+  booktitle={International Conference on Learning Representations},
+  year={2021}
+}
+
+@article{zhu2019deep,
+  title={Deep leakage from gradients},
+  author={Zhu, Ligeng and Liu, Zhijian and Han, Song},
+  journal={Advances in neural information processing systems},
+  volume={32},
+  year={2019}
+}
