correct the bibtex

--- a/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
+++ b/assets/bibliography/2024-05-07-understanding-gradient-inversion-attacks-from-the-prior-knowledge-perspective.bib
@@ -3,8 +3,7 @@
   author={Wu, Ruihan and Chen, Xiangyu and Guo, Chuan and Weinberger, Kilian Q},
   booktitle={Uncertainty in Artificial Intelligence},
   pages={2293--2303},
-  year={2023},
-  organization={PMLR}
+  year={2023}
 }
 
 @inproceedings{yin2021see,
@@ -27,7 +26,7 @@
 @inproceedings{jeon2021gradient,
   title={Gradient inversion with generative image prior},
   author={Jeon, Jinwoo and Lee, Kangwook and Oh, Sewoong and Ok, Jungseul and others},
-  booktitle={Advances in neural information processing systems},
+  booktitle={Advances in Neural Information Processing Systems},
   volume={34},
   pages={29898--29908},
   year={2021}
@@ -41,15 +40,6 @@
   year={2023}
 }
 
-@inproceedings{anonymous2023towards,
-title={Towards Eliminating Hard Label Constraints in Gradient Inversion Attacks},
-author={Anonymous},
-booktitle={Submitted to The Twelfth International Conference on Learning Representations},
-year={2023},
-url={https://openreview.net/forum?id=s8cMuxI5gu},
-note={under review}
-}
-
 @inproceedings{zhu2021r,
   title={R-GAP: Recursive Gradient Attack on Privacy},
   author={Zhu, Junyi and Blaschko, Matthew B},
@@ -57,10 +47,10 @@ note={under review}
   year={2021}
 }
 
-@article{zhu2019deep,
+@inproceedings{zhu2019deep,
   title={Deep leakage from gradients},
   author={Zhu, Ligeng and Liu, Zhijian and Han, Song},
-  journal={Advances in neural information processing systems},
+  booktitle={Advances in Neural Information Processing Systems},
   volume={32},
   year={2019}
 }
