feat: added blog bib

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -6,3 +6,10 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@inproceedings{Schmidhuber1991APF,
+  title={A possibility for implementing curiosity and boredom in model-building neural controllers},
+  author={J{\"u}rgen Schmidhuber},
+  year={1991},
+  url={https://api.semanticscholar.org/CorpusID:18060048}
+}
