--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -13,3 +13,48 @@
   year={1991},
   url={https://api.semanticscholar.org/CorpusID:18060048}
 }
+
+@misc{burda2018exploration,
+      title={Exploration by Random Network Distillation}, 
+      author={Yuri Burda and Harrison Edwards and Amos Storkey and Oleg Klimov},
+      year={2018},
+      eprint={1810.12894},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{guo2022byolexplore,
+      title={{BYOL-Explore: Exploration by Bootstrapped Prediction}}, 
+      author={{Zhaohan Daniel Guo and Shantanu Thakoor and Miruna Pîslar and Bernardo Avila Pires and Florent Altché and Corentin Tallec and Alaa Saade and Daniele Calandriello and Jean-Bastien Grill and Yunhao Tang and Michal Valko and Rémi Munos and Mohammad Gheshlaghi Azar and Bilal Piot}},
+      year={2022},
+      eprint={2206.08332},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{jarrett2023curiosity,
+      title={Curiosity in Hindsight: Intrinsic Exploration in Stochastic Environments}, 
+      author={Daniel Jarrett and Corentin Tallec and Florent Altché and Thomas Mesnard and Rémi Munos and Michal Valko},
+      year={2023},
+      eprint={2211.10515},
+      archivePrefix={arXiv},
+      primaryClass={stat.ML}
+}
+
+@misc{pathak2017curiositydriven,
+      title={Curiosity-driven Exploration by Self-supervised Prediction}, 
+      author={Deepak Pathak and Pulkit Agrawal and Alexei A. Efros and Trevor Darrell},
+      year={2017},
+      eprint={1705.05363},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{burda2018largescale,
+      title={Large-Scale Study of Curiosity-Driven Learning}, 
+      author={Yuri Burda and Harri Edwards and Deepak Pathak and Amos Storkey and Trevor Darrell and Alexei A. Efros},
+      year={2018},
+      eprint={1808.04355},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
