--- a/assets/bibliography/2024-05-07-what-exactly-has-tabpfn-learned-to-do.bib
+++ b/assets/bibliography/2024-05-07-what-exactly-has-tabpfn-learned-to-do.bib
@@ -103,3 +103,19 @@ url={https://openreview.net/forum?id=KSugKcbNf9}
   author={Krizhevsky, Alex},
   year={2009}
 }
+
+@book{pearl2009causality,
+  title={Causality},
+  author={Pearl, Judea},
+  year={2009},
+  publisher={Cambridge university press}
+}
+
+@article{grinsztajn2022tree,
+  title={Why do tree-based models still outperform deep learning on typical tabular data?},
+  author={Grinsztajn, L{\'e}o and Oyallon, Edouard and Varoquaux, Ga{\"e}l},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={507--520},
+  year={2022}
+}
