--- a/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
+++ b/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
@@ -1,3 +1,43 @@
+@article{schulman2017proximal,
+  title={Proximal policy optimization algorithms},
+  author={Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+  journal={arXiv preprint arXiv:1707.06347},
+  year={2017}
+}
+
+@article{de2020independent,
+  title={Is independent learning all you need in the starcraft multi-agent challenge?},
+  author={de Witt, Christian Schroeder and Gupta, Tarun and Makoviichuk, Denys and Makoviychuk, Viktor and Torr, Philip HS and Sun, Mingfei and Whiteson, Shimon},
+  journal={arXiv preprint arXiv:2011.09533},
+  year={2020}
+}
+
+@article{yu2022surprising,
+  title={The surprising effectiveness of ppo in cooperative multi-agent games},
+  author={Yu, Chao and Velu, Akash and Vinitsky, Eugene and Gao, Jiaxuan and Wang, Yu and Bayen, Alexandre and Wu, Yi},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={24611--24624},
+  year={2022}
+}
+
+@article{hu2021policy,
+  title={Policy regularization via noisy advantage values for cooperative multi-agent actor-critic methods},
+  author={Hu, Jian and Hu, Siyue and Liao, Shih-wei},
+  journal={arXiv preprint arXiv:2106.14334},
+  year={2021}
+}
+
+@article{krawczyk2017ensemble,
+  title={Ensemble learning for data stream analysis: A survey},
+  author={Krawczyk, Bartosz and Minku, Leandro L and Gama, Jo{\~a}o and Stefanowski, Jerzy and Wo{\'z}niak, Micha{\l}},
+  journal={Information Fusion},
+  volume={37},
+  pages={132--156},
+  year={2017},
+  publisher={Elsevier}
+}
+
 @InProceedings{pmlr-v80-rashid18a,
   title = 	 {{QMIX}: Monotonic Value Function Factorisation for Deep Multi-Agent Reinforcement Learning},
   author =       {Rashid, Tabish and Samvelyan, Mikayel and Schroeder, Christian and Farquhar, Gregory and Foerster, Jakob and Whiteson, Shimon},
