--- a/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
+++ b/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
@@ -38,6 +38,14 @@
   publisher={Elsevier}
 }
 
+@article{lowe2017multi,
+  title={Multi-agent actor-critic for mixed cooperative-competitive environments},
+  author={Lowe, Ryan and Wu, Yi I and Tamar, Aviv and Harb, Jean and Pieter Abbeel, OpenAI and Mordatch, Igor},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
 @InProceedings{pmlr-v80-rashid18a,
   title = 	 {{QMIX}: Monotonic Value Function Factorisation for Deep Multi-Agent Reinforcement Learning},
   author =       {Rashid, Tabish and Samvelyan, Mikayel and Schroeder, Christian and Farquhar, Gregory and Foerster, Jakob and Whiteson, Shimon},
