--- a/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
+++ b/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
@@ -46,6 +46,16 @@
   year={2017}
 }
 
+
+@inproceedings{foerster2018counterfactual,
+  title={Counterfactual multi-agent policy gradients},
+  author={Foerster, Jakob and Farquhar, Gregory and Afouras, Triantafyllos and Nardelli, Nantas and Whiteson, Shimon},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence},
+  volume={32},
+  number={1},
+  year={2018}
+}
+
 @InProceedings{pmlr-v80-rashid18a,
   title = 	 {{QMIX}: Monotonic Value Function Factorisation for Deep Multi-Agent Reinforcement Learning},
   author =       {Rashid, Tabish and Samvelyan, Mikayel and Schroeder, Christian and Farquhar, Gregory and Foerster, Jakob and Whiteson, Shimon},
