feat: added images and introduction

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -1,6 +1,6 @@
 @misc{alet2020metalearning,
       title={Meta-learning curiosity algorithms}, 
-      author={{Ferran Alet and Martin F. Schneider and Tomas Lozano-Perez and Leslie Pack Kaelbling}},
+      author={Ferran Alet and Martin F. Schneider and Tomas Lozano-Perez and Leslie Pack Kaelbling},
       year={2020},
       eprint={2003.05325},
       archivePrefix={arXiv},
@@ -24,8 +24,8 @@
 }
 
 @misc{guo2022byolexplore,
-      title={{BYOL-Explore: Exploration by Bootstrapped Prediction}}, 
-      author={{Zhaohan Daniel Guo and Shantanu Thakoor and Miruna Pîslar and Bernardo Avila Pires and Florent Altché and Corentin Tallec and Alaa Saade and Daniele Calandriello and Jean-Bastien Grill and Yunhao Tang and Michal Valko and Rémi Munos and Mohammad Gheshlaghi Azar and Bilal Piot}},
+      title={BYOL-Explore: Exploration by Bootstrapped Prediction}, 
+      author={Zhaohan Daniel Guo and Shantanu Thakoor and Miruna Pîslar and Bernardo Avila Pires and Florent Altché and Corentin Tallec and Alaa Saade and Daniele Calandriello and Jean-Bastien Grill and Yunhao Tang and Michal Valko and Rémi Munos and Mohammad Gheshlaghi Azar and Bilal Piot},
       year={2022},
       eprint={2206.08332},
       archivePrefix={arXiv},
