--- a/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
+++ b/assets/bibliography/2024-05-07-is-mappo-all-you-need.bib
@@ -1,3 +1,12 @@
+@article{bucsoniu2010multi,
+  title={Multi-agent reinforcement learning: An overview},
+  author={Bu{\c{s}}oniu, Lucian and Babu{\v{s}}ka, Robert and De Schutter, Bart},
+  journal={Innovations in multi-agent systems and applications-1},
+  pages={183--221},
+  year={2010},
+  publisher={Springer}
+}
+
 @article{schulman2017proximal,
   title={Proximal policy optimization algorithms},
   author={Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
