fix: citation and added figure

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -58,3 +58,13 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG}
 }
+
+@book{sutton2018intro,
+author = {Sutton, Richard S. and Barto, Andrew G.},
+title = {Introduction to Reinforcement Learning},
+year = {2018},
+isbn = {978-0-262-19398-6},
+publisher = {MIT Press},
+address = {Cambridge, MA, USA},
+edition = {2nd},
+}
