added all images

--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -68,3 +68,13 @@ publisher = {MIT Press},
 address = {Cambridge, MA, USA},
 edition = {2nd},
 }
+
+@inproceedings{singh2004intri,
+author = {Singh, Satinder and Barto, Andrew and Chentanez, Nuttapong},
+pages = {},
+publisher = {MIT Press},
+title = {Intrinsically Motivated Reinforcement Learning},
+url = {https://proceedings.neurips.cc/paper_files/paper/2004/file/4be5a36cbaca8ab9d2066debfe4e65c1-Paper.pdf},
+volume = {17},
+year = {2004}
+}
