--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -69,7 +69,7 @@ address = {Cambridge, MA, USA},
 edition = {2nd},
 }
 
-@inproceedings{singh2004intri,
+@article{singh2004intri,
 author = {Singh, Satinder and Barto, Andrew and Chentanez, Nuttapong},
 publisher = {MIT Press},
 title = {Intrinsically Motivated Reinforcement Learning},
