--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -69,11 +69,9 @@ address = {Cambridge, MA, USA},
 edition = {2nd},
 }
 
-@article{singh2004intri,
+@inproceedings{inproceedings,
+title = {Intrinsically Motivated Reinforcement Learning.},
 author = {Singh, Satinder and Barto, Andrew and Chentanez, Nuttapong},
-publisher = {MIT Press},
-title = {Intrinsically Motivated Reinforcement Learning},
-url = {https://proceedings.neurips.cc/paper_files/paper/2004/file/4be5a36cbaca8ab9d2066debfe4e65c1-Paper.pdf},
-volume = {17},
 year = {2004},
+url = {https://proceedings.neurips.cc/paper_files/paper/2004/file/4be5a36cbaca8ab9d2066debfe4e65c1-Paper.pdf},
 }
