--- a/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
+++ b/assets/bibliography/2024-05-07-exploring-meta-learned-curiosity-algorithms.bib
@@ -69,7 +69,7 @@ address = {Cambridge, MA, USA},
 edition = {2nd},
 }
 
-@inproceedings{inproceedings,
+@inproceedings{singh2004intri,
 title = {Intrinsically Motivated Reinforcement Learning.},
 author = {Singh, Satinder and Barto, Andrew and Chentanez, Nuttapong},
 year = {2004},
